--- a/docs/troubleshooting/hotspot-setup.mdx
+++ b/docs/troubleshooting/hotspot-setup.mdx
@@ -15,7 +15,7 @@ are some basic troubleshooting tips to try out:
 - It may seem silly, but trying the plug in a different outlet (ideally on a
   separate circuit) can help eliminate the possibility of a blown circuit as the
   culprit.
-- If you have more than one hotspot, or an additional 5V 3A power adapter laying
+- If you have more than one Hotspot, or an additional 5V 3A power adapter laying
   around, trying a different power cord can help identify if it's a bad power
   supply or if something else is the issue.
 - If the power outlet and cord do not seem to be the issue, try plugging in the
