--- a/docs/troubleshooting/hotspot-setup.mdx
+++ b/docs/troubleshooting/hotspot-setup.mdx
@@ -17,7 +17,7 @@ are some basic troubleshooting tips to try out:
   culprit.
 - If you have more than one Hotspot, or an additional 5V 3A power adapter laying
   around, trying a different power cord can help identify if it's a bad power
-  supply or if something else is the issue.
+  supply or if something else is the issue. Please do not try any power adapter (always confirm it is 5V 3A) or else you will short-circuit the Hotspot which is irreparable.
 - If the power outlet and cord do not seem to be the issue, try plugging in the
   Hotspot and leaving it plugged in for 2 minutes. Then check back to see if any
   lights are on.
