--- a/docs/troubleshooting/hotspot-setup.mdx
+++ b/docs/troubleshooting/hotspot-setup.mdx
@@ -22,7 +22,7 @@ are some basic troubleshooting tips to try out:
   Hotspot and leaving it plugged in for 2 minutes. Then check back to see if any
   lights are on.
 
-If there's no lights or activity after these steps, please contact us at
+If there's no lights or activity after these steps, please contact the Hotspot manufacturer.
 support@helium.com and include the MAC address listed on the bottom of the
 device and we can work with you to get the unit sent in for further diagnosis.
 Note that we are only able to RMA Hotspots that are under warranty and purchased
