--- a/docs/troubleshooting/hotspot-setup.mdx
+++ b/docs/troubleshooting/hotspot-setup.mdx
@@ -23,7 +23,7 @@ are some basic troubleshooting tips to try out:
   lights are on.
 
 If there's no lights or activity after these steps, please contact the Hotspot manufacturer.
-Note that we are only able to RMA Hotspots that are under warranty and purchased
+Note that Helium is only able to RMA Hotspots that are under warranty and purchased
 directly through Helium.com
 
 ## I can't Pair the hotspot with the App:
