--- a/docs/troubleshooting/hotspot-setup.mdx
+++ b/docs/troubleshooting/hotspot-setup.mdx
@@ -26,7 +26,7 @@ If there's no lights or activity after these steps, please contact the Hotspot m
 Note that Helium is only able to RMA Hotspots that are under warranty and purchased
 directly through Helium.com
 
-## I can't Pair the hotspot with the App:
+## I can't Pair the Hotspot with the App:
 
 - Double check that the phones bluetooth settings are enabled. Once enabled,
   return to the app to try pairing again. Be sure to press and hold the Pairing
