--- a/docs/troubleshooting/hotspot-setup.mdx
+++ b/docs/troubleshooting/hotspot-setup.mdx
@@ -28,7 +28,7 @@ directly through Helium.com
 
 ## I can't Pair the Hotspot with the App:
 
-- Double check that the phones bluetooth settings are enabled. Once enabled,
+- Double check that the phone's Bluetooth settings are enabled. Once enabled,
   return to the app to try pairing again. Be sure to press and hold the Pairing
   button for at least 3 seconds, then release.
 - Make sure that the app has the Location permissions enabled. These can be
