--- a/docs/troubleshooting/hotspot-setup.mdx
+++ b/docs/troubleshooting/hotspot-setup.mdx
@@ -37,7 +37,7 @@ directly through Helium.com
 - Try power-cycling the Hotspot by unplugging it, waiting 10 seconds, and
   plugging it back in. Force close and reopen the app, then attempt to Pair
   again. If you still have trouble after trying these things, please feel free
-  to email support@helium.com and we can troubleshoot further with you. It's
+ email your Hotspot manufacturer. It's
   helpful to include the Hotspots name and what color the light on the Hotspot
   is.
 - Try downloading the Helium Hotspot Utility app from the app store, and see if
