--- a/docs/troubleshooting/hotspot-setup.mdx
+++ b/docs/troubleshooting/hotspot-setup.mdx
@@ -36,7 +36,7 @@ directly through Helium.com
 - Make sure you have the latest version of the app from the app store.
 - Try power-cycling the Hotspot by unplugging it, waiting 10 seconds, and
   plugging it back in. Force close and reopen the app, then attempt to Pair
-  again. If you still have trouble after trying these things, please feel free
+  again. If you still have trouble after trying these things, please 
  email your Hotspot manufacturer. It's
   helpful to include the Hotspots name and what color the light on the Hotspot
   is.
