--- a/docs/troubleshooting/hotspot-setup.mdx
+++ b/docs/troubleshooting/hotspot-setup.mdx
@@ -46,7 +46,7 @@ directly through Helium.com
 
 ## I can Pair, but I can't add my location:
 
-Similarly to above, double check that the phones bluetooth settings are enabled.
+Similarly to above, double check that the phones Bluetooth settings are enabled.
 Once enabled, return to the app to try pairing again.
 
 • Make sure that the app has the Location permissions enabled. These can be
