--- a/docs/troubleshooting/hotspot-setup.mdx
+++ b/docs/troubleshooting/hotspot-setup.mdx
@@ -57,7 +57,7 @@ reboots (can take a minute or two) Then attempt to Pair again. For RAK miners,
 they are in pairing mode for the first 5 minutes after fully booting. • Try
 completely closing and reopening the app.
 
-If you still have trouble and are able to run the diagnostics, please send that
+If you still have trouble and are able to run the diagnostics, please a report
 to support@helium.com. Please include a video of your screen if possible, to
 show the exact steps.  
 iOS 11 or later: https://support.apple.com/en-us/HT207935 (Android may require a
