--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -10,7 +10,7 @@ slug: /wallets/app-wallet
 The Helium app (available for
 [iOS](https://apps.apple.com/us/app/helium-hotspot/id1450463605) and
 [Android](https://play.google.com/store/apps/details?id=com.helium.wallet))
-includes everything you need to on-board and maintain your hotspot and view its
+includes everything you need to on-board and maintain your Hotspot and view its
 activity. With the app, which also is your Helium wallet, you're able to do
 things like:
 
