--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -14,7 +14,7 @@ includes everything you need to on-board and maintain your Hotspot and view its
 activity. With the app, which also is your Helium wallet, you're able to do
 things like:
 
-- Send and receive Helium tokens, and create Data Credits
+- Send and receive HNT and create Data Credits
 - Add your hotspot to the network and set your location
 - Configure your Wi-Fi
 - View your hotspots activity
