--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -15,7 +15,7 @@ activity. With the app, which also is your Helium wallet, you're able to do
 things like:
 
 - Send and receive HNT and create Data Credits
-- Add your hotspot to the network and set your location
+- Add your Hotspot to the network and set your location
 - Configure your Wi-Fi
 - View your hotspots activity
 - See where other Hotspots are located
