--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -17,7 +17,7 @@ things like:
 - Send and receive HNT and create Data Credits
 - Add your Hotspot to the network and set your location
 - Configure your Wi-Fi
-- View your hotspots activity
+- View your Hotspot's activity
 - See where other Hotspots are located
 
 [Check out the latest app release notes](https://engineering.helium.com/)
