--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -24,7 +24,7 @@ things like:
 
 ## Hotspot Tab
 
-The hotspot tab shows your hotspot(s). There's a location map, the hotspots
+The Hotspot tab shows your hotspot(s). There's a location map, the Hotspots
 Settings section (gear icon), as well as a general health status (Online or
 Needs Attention). The settings provide access to updating the location and WiFi
 network, as well as running the Hotspots diagnostic report if needed.
