rename troublshooting to guides on app wallet doc

--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -46,7 +46,7 @@ reveal the 12 security words (your private key) for your wallet, and view your
 current app version. There are also access to some help articles and the
 community Discord channel.
 
-## Troubleshooting 
+## Guides 
 
 * [Twelve Words Seed Phrase](/wallets/app-wallet/twelve-words)
 * [Transfer Hotspot](/wallets/app-wallet/transfer-hotspot)
