update victor manual links

--- a/docs/use-the-network/devices/ready-to-use/victor/victor-trap-v4xx.mdx
+++ b/docs/use-the-network/devices/ready-to-use/victor/victor-trap-v4xx.mdx
@@ -28,9 +28,9 @@ channel on [the Helium Discord Server](https://discord.gg/helium).
 
 ### Resources
 
-[Manual](https://www.vlinkhq.com/instructions/V450-V460-Vlink-User-Manual-US.pdf)
+[VLINK Start-Up Guide](https://helium-docs.s3-us-west-2.amazonaws.com/VLINK+Tunnel+Trap+Setup+Instructions+V3.pdf)
 
-[Brochure](https://www.vlinkhq.com/images/VLink_Brochure.pdf)
+[Device Manual](https://helium-docs.s3-us-west-2.amazonaws.com/V450-V460-Vlink-User-Manual-US.pdf)
 
 ### Add device in Console
 
