add app nav screenshots

--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -29,15 +29,24 @@ Settings section (gear icon), as well as a general health status (Online or
 Needs Attention). The settings provide access to updating the location and WiFi
 network, as well as running the Hotspots diagnostic report if needed.
 
+<img src={useBaseUrl("img/wallets/helium-app/hotspots-nav.jpg")} />
+
+
 ## Account Tab
 
 The Account tab shows your wallet and account balance, Notifications, the Send
 and Receive options, and recent transactions.
 
+<img src={useBaseUrl("img/wallets/helium-app/account-nav.jpg")} />
+
+
 ## Notifications Tab
 
 This sections gives you a timeline view of all notifications relevant to your
 hotspots and wallet transcations.
+
+<img src={useBaseUrl("img/wallets/helium-app/notifications-nav.jpg")} />
+
 
 ## Settings Tab
 
@@ -45,6 +54,9 @@ In this section, you can configure your apps PIN settings, set the app Language,
 reveal the 12 security words (your private key) for your wallet, and view your
 current app version. There are also access to some help articles and the
 community Discord channel.
+
+<img src={useBaseUrl("img/wallets/helium-app/settings-nav.jpg")} />
+
 
 ## Guides 
 
