--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -29,7 +29,7 @@ Settings section (gear icon), as well as a general health status (Online or
 Needs Attention). The settings provide access to updating the location and WiFi
 network, as well as running the Hotspots diagnostic report if needed.
 
-<img src={useBaseUrl("img/wallets/helium-app/hotspots-nav.jpg")} />
+<img src={useBaseUrl("img/wallets/helium-app/hotspots-nav.jpeg")} />
 
 
 ## Account Tab
@@ -37,7 +37,7 @@ network, as well as running the Hotspots diagnostic report if needed.
 The Account tab shows your wallet and account balance, Notifications, the Send
 and Receive options, and recent transactions.
 
-<img src={useBaseUrl("img/wallets/helium-app/account-nav.jpg")} />
+<img src={useBaseUrl("img/wallets/helium-app/account-nav.jpeg")} />
 
 
 ## Notifications Tab
@@ -45,7 +45,7 @@ and Receive options, and recent transactions.
 This sections gives you a timeline view of all notifications relevant to your
 hotspots and wallet transcations.
 
-<img src={useBaseUrl("img/wallets/helium-app/notifications-nav.jpg")} />
+<img src={useBaseUrl("img/wallets/helium-app/notifications-nav.jpeg")} />
 
 
 ## Settings Tab
@@ -55,7 +55,7 @@ reveal the 12 security words (your private key) for your wallet, and view your
 current app version. There are also access to some help articles and the
 community Discord channel.
 
-<img src={useBaseUrl("img/wallets/helium-app/settings-nav.jpg")} />
+<img src={useBaseUrl("img/wallets/helium-app/settings-nav.jpeg")} />
 
 
 ## Guides 
