--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -5,6 +5,8 @@ sidebar_label: App Wallet
 slug: /wallets/app-wallet
 ---
 
+import useBaseUrl from "@docusaurus/useBaseUrl";
+
 # Helium App Wallet Overview
 
 The Helium app (available for
