--- a/docs/mine-hnt/light-hotspots/guides/dragino.mdx
+++ b/docs/mine-hnt/light-hotspots/guides/dragino.mdx
@@ -132,6 +132,9 @@ now see it uplinking traffic through the Dragino gateway. You can verify this by
 turning on your device within range of the Dragino and looking for traffic in
 Console associated to the Dragino gateway's animal name.
 
+Note, during the alpha period, the helium gateway service by default routes data
+traffic to the [Staging Router/Console](https://staging-console.helium.wtf/).
+
 ### Through the System Logs
 
 Use the Dragino system log to verify that Helium Gateway has started. You can
@@ -163,8 +166,8 @@ LoRaWAN settings are not correct per the above.
 ## COMING SOON: Onboard Gateway
 
 As part of Milestone 1.5 of the Light Gateway roadmap, you will be able to
-onboard light gateways such as the Dragino to appear on the coverage map and
-earn HNT for data transfers (but not for Proof of Coverage). See
+onboard light gateways such as the Dragino to appear on the coverage map, and then,
+in Milestone 2, earn HNT for data transfers (but not for Proof of Coverage). See
 [Light Gateways - BETA](https://docs.helium.com/mine-hnt/light-hotspots) for
 more information. This process will require using the Helium
 [command-line interface (CLI) Wallet](https://github.com/helium/helium-wallet-rs)
