--- a/docs/wallets/ledger.mdx
+++ b/docs/wallets/ledger.mdx
@@ -19,6 +19,12 @@ a Nano S or Nano X, the Helium ledger app allows you to:
 This guide will walk through using Helium on a Ledger Nano S but is similar to
 setup on the Nano X.
 
+:::info
+As of version 2.1.1, the Helium Ledger application is currently PENDING REVIEW
+by the Ledger team. The application is scheduled for security review and we
+hope to hear about the results by end of Q3 2021.
+:::
+
 ## Installing the Helium ledger application
 
 - Go to Ledger Live &gt; Settings &gt; Experimental Features &gt; Enable
