updated based on feedback.
Still unclear on what the mainnet validator API and snapshot URLs will be

--- a/docs/mine-hnt/validators/requirements.mdx
+++ b/docs/mine-hnt/validators/requirements.mdx
@@ -11,6 +11,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 # Staking Requirements
 
 10,000 HNT is required to stake a single validator
+Overstaking is not currently supported
 
 
 # Technical Requirements
@@ -21,7 +22,7 @@ Mainnet validator system requirements:
   - Planning on running from docker: Any linux based system capable of running docker
   - Planning on running from source: Ubuntu 20.04 LTS
 - CPU: 
-  - Intel, AMD or ARM based processor 3.0 GHz or above with 2 or more cores
+  - Intel, AMD or ARM based processor 2.5 GHz or above with 2 or more cores
   - In testnet, scores of [GeekBench 5](https://www.geekbench.com/) Multi-Core of greater than 2,200 have performed well
   - For Intel and AMD systems, [AVX2 or AVX support](https://en.wikipedia.org/wiki/Advanced_Vector_Extensions) is required. Verify your CPU supports these extensions by checking `grep avx /proc/cpuinfo` and verifying that AVX support is included in the output.
   - These recommendations may change for mainnet as the size of consensus groups grow and hotspot transactions are added
