--- a/docs/mine-hnt/light-hotspots/guides/dragino.mdx
+++ b/docs/mine-hnt/light-hotspots/guides/dragino.mdx
@@ -163,7 +163,7 @@ Server settings are configured for the TTN EU server which will also provide
 acknowledgement. However, the absence of acknowledgement could indicate the the
 LoRaWAN settings are not correct per the above.
 
-## COMING SOON: Onboard on Data-Only Hotspot
+## COMING SOON: Onboard as Data-Only Hotspot
 
 As part of Milestone 1.5 of the Light Gateway project roadmap, you will be able to
 onboard light gateways such as the Dragino to appear on the coverage map, and then,
