--- a/docs/wallets/ledger.mdx
+++ b/docs/wallets/ledger.mdx
@@ -13,7 +13,7 @@ The Helium blockchain has support for Ledger hardware wallets. When installed on
 a Nano S or Nano X, the Helium ledger app allows you to:
 
 - view your Helium address(es) and balances
-- submit a pay transaction
+- issue a payment to one address
 - submit validator transactions, including stake, transfer, and unstake
 
 This guide will walk through using Helium on a Ledger Nano S but is similar to
