--- a/docs/mine-hnt/hotspot-makers/docker-integration/docker-integration.mdx
+++ b/docs/mine-hnt/hotspot-makers/docker-integration/docker-integration.mdx
@@ -131,14 +131,14 @@ where these are enabled.
 
 You will also want to add a few arguments to your Docker run command which
 create the extra mount point for the config, connect the i2c-device to the
-Docker container, and connect D-bus to the Docker container:
+Docker container, and connect D-bus to the Docker container. For example:
 
 ```bash
- --device /dev/i2c-1
- --net host
- --privileged
- -v /var/run/dbus:/var/run/dbus
- --mount type=bind,source=/home/ubuntu/miner_data,target=/var/data \
+ --device /dev/i2c-1 \
+ --net host \
+ --privileged \
+ -v /var/run/dbus:/var/run/dbus \
+ --mount type=bind,source=/home/ubuntu/overlay/docker.config,target=/opt/miner/releases/0.1.0/sys.config
 ```
 
 ## Define the DBus Config
