--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -5,6 +5,9 @@ sidebar_label: Understanding Hexagons
 slug: /wallets/app-wallet/hexagons
 ---
 
+import useBaseUrl from "@docusaurus/useBaseUrl";
+
+
 # Introduction to Hexagons
 
 Hexagons, while also a six-sided shape, is the underlying representation of the earth on the Helium network. Based on Uber's H3 index, the surface of the earth can be represented by a grid of hexagons at different resolutions, with higher resolutions covering a larger area, and the smallest resolution coverage centimeters of the earth. To understand the technical details and the implementation, please check out the <a href="https://blog.helium.com/mapping-the-world-with-hexagons-49f57d8b3df5">blog from our VP of Engineering</a>.
