update info box

--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -65,3 +65,4 @@ community Discord channel.
 * [Twelve Words Seed Phrase](/wallets/app-wallet/twelve-words)
 * [Transfer Hotspot](/wallets/app-wallet/transfer-hotspot)
 * [RAK Hotspot Setup](/wallets/app-wallet/rak-hotspot-setup)
+* [Understanding Hexagons](/wallets/app-wallet/hexagons)
