--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -26,7 +26,7 @@ To improve privacy, security, and understand scaling, Helium is introducing hexa
 
 The Helium app displays resolution 8 hexagons, which has an area of 0.7373276 km², and edge length of 0.461354684 km. About 130 resolution 8 hexagons covers the city of San Francisco. 
 
-:::Note
+:::Info
 
 Resolution 8 hexagons may be temporary. Depending on the outcome of an investigation to see how Resolution 8 asserts affect Proof-of-Coverage, the resolution may change from resolution 8 to 9, or another value. This will be brought forth in a Helium Improvement Proposal.
 
@@ -34,7 +34,7 @@ Resolution 8 hexagons may be temporary. Depending on the outcome of an investiga
 
 ## Viewing Hotspots in Resolution 8
 
-:::Note
+:::Info
 
 Viewing Resolution 8 Hexagons is only available on app version 3.3.0 and later.
 
