--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -206,7 +206,7 @@ Also known as **US902-928**
 | :------------ | :-------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | Gabon         |                       |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
 | Gambia        |                       |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
-| Georgia       | EU863-870             | CEPT Rec. 70-03    http://mca.comcom.ge/spectrum_map/                                                                                                                                                                                                                                                                                                                                                                                                                                |
+| Georgia       | EU863-870   EU433  | [RP002-1.0.2 LoRaWAN® Regional Parameters (Nov. 2020)](https://lora-alliance.org/wp-content/uploads/2020/11/RP_2-1.0.2.pdf)                                                                                                                                                                                                                                                                                                                                                                                                                              |
 | Germany       | EU863-870 EU433       | [Non-specific Short Range Devices \(SRD\) regulations](http://www.bnetza.de/SharedDocs/Downloads/DE/Sachgebiete/Telekommunikation/Unternehmen_Institutionen/Frequenzen/Allgemeinzuteilungen/2018_05_SRD_pdf.html), CEPT Rec. 70-03                                                                                                                                                                                                                                                   |
 | Ghana         |                       |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
 | Greece        | EU863-870 EU433       | [Radio frequency regulations](http://www.eett.gr/opencms/export/sites/default/admin/downloads/Announcments/AP399_034.pdf), [433MHz SRD regulations](http://www.eett.gr/opencms/export/sites/default/EETT/Electronic_Communications/Radio_Communications/TelecommunicationsEquipment/104v2.pdf), [868MHz SRD regulations](http://www.eett.gr/opencms/export/sites/default/EETT/Electronic_Communications/Radio_Communications/TelecommunicationsEquipment/105v2.pdf), CEPT Rec. 70-03 |
