--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -263,7 +263,7 @@ Also known as **US902-928**
 | :------------ | :------------------ | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | Laos          | AS923-925 \(“AS2”\) |                                                                                                                                                                                                          |
 | Latvia        | EU863-870 EU433     | CEPT Rec. 70-03                                                                                                                                                                                          |
-| Lebanon       |                     |                                                                                                                                                                                                          |
+| Lebanon       | EU863-870 EU433     | https://lora-alliance.org/wp-content/uploads/2020/11/RP_2-1.0.2.pdf                                                                                                                                      |
 | Lesotho       | EU863-870 EU433     | CRASA follows CEPT Rec. 70-03, [Radio Spectrum Management Guidelines and Procedures 2014](http://www.lca.org.ls/images/documents/Radio%20Spectrum%20Management%20Guidelines%20and%20Procedures_2014.pdf) |
 | Liberia       |                     |                                                                                                                                                                                                          |
 | Libya         |                     |                                                                                                                                                                                                          |
@@ -399,7 +399,7 @@ Also known as **US902-928**
 | Country                          | Frequency Plan        | Regulatory document                                                                                                                   |
 | :------------------------------- | :-------------------- | :------------------------------------------------------------------------------------------------------------------------------------ |
 | Uganda                           |                       |                                                                                                                                       |
-| Ukraine                          | unknown, limited CEPT | CEPT Rec. 70-03                                                                                                                       |
+| Ukraine                          | EU863-870 EU433       | https://lora-alliance.org/wp-content/uploads/2020/11/RP_2-1.0.2.pdf                                                                   |
 | United Arab Emirates \(UAE\)     | EU863-870 EU433       | EN 302 208, [TRA Regulations](https://www.tra.gov.ae/assets/YXsb1a9i.pdf.aspx)                                                        |
 | United Kingdom \(UK\)            | EU863-870 EU433       | [Forum thread about requirements](https://www.thethingsnetwork.org/forum/t/uk-legal-requirements-for-equipment/6239), CEPT Rec. 70-03 |
 | United States of America \(USA\) | US902-928             |                                                                                                                                       |
