--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -26,7 +26,7 @@ To improve privacy, security, and understand scaling, Helium is introducing hexa
 
 The Helium app displays resolution 8 hexagons, which has an area of 0.7373276 km², and edge length of 0.461354684 km. About 130 resolution 8 hexagons covers the city of San Francisco. 
 
-:::Info
+:::note
 
 Resolution 8 hexagons may be temporary. Depending on the outcome of an investigation to see how Resolution 8 asserts affect Proof-of-Coverage, the resolution may change from resolution 8 to 9, or another value. This will be brought forth in a Helium Improvement Proposal.
 
@@ -34,7 +34,7 @@ Resolution 8 hexagons may be temporary. Depending on the outcome of an investiga
 
 ## Viewing Hotspots in Resolution 8
 
-:::Info
+:::note
 
 Viewing Resolution 8 Hexagons is only available on app version 3.3.0 and later.
 
@@ -42,7 +42,7 @@ Viewing Resolution 8 Hexagons is only available on app version 3.3.0 and later.
 
 To view a map of the network, go to the Hotspot tab. 
 
-<img src={useBaseUrl("img/wallets/helium-app/hotspot-tab-hex.png")} />
+<img src={useBaseUrl("img/wallets/helium-app/hotspot-tab-hex.png")} style="width:200px;"/>
 
 Each occupied hexagon will have a grey hexagon representing 1 Hotspot. Hexagons with more than 1 Hotspot will show a number.
 
@@ -50,7 +50,7 @@ Tapping on a hexagon with a number will bring up a Hotspot selector, showing the
 
 Hotspots that you follow will be <purple>purple</purple>, and Hotspots that you own will be <blue>blue</blue>. Other Hotspots will be grey.
 
-<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-content-pill.png")} />
+<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-content-pill.png")} style="width:200px;"/>
 
 
 The Owned and Followed Hotspot Map layer is displayed by default.
@@ -85,7 +85,7 @@ The number is a representation of how dense a hexagon is (how many Hotspots occu
 
 To counteract the effects of a lower transmit scale, it is recommended that Hotspots improve their antenna setup (outdoors, higher gain, higher elevation) so it can witness beacons of Hotspots further away, with potentially higher transmit scales. This ensures a low-scaled Hotspot can continue to earn at an optimal level.
 
-:::info
+:::tip
 
 TLDR: Low Transmit Scale does not mean your Hotspot is doomed! Make sure you have a great setup so you can witness Hotspots with 1.0 Transmit scales.
 
@@ -108,7 +108,7 @@ Discovery Mode is a tool to understand Hotspot coverage. Responders that heard a
 ## Assert Location
 Hotspot can now see how many other Hotspots are occupying hexagons next to them. 
 
-:::Info 
+:::info 
 
 It's important to be truthful in where your Hotspot is located for Proof-of-Coverage. Randomly selecting an empty hexagon will not mean the Hotspot will mine more. 
 
