--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -42,7 +42,7 @@ Viewing Resolution 8 Hexagons is only available on app version 3.3.0 and later.
 
 To view a map of the network, go to the Hotspot tab. 
 
-<img src={useBaseUrl("img/wallets/helium-app/hotspot-tab-hex.png")} style="width:200px;"/>
+<img src={useBaseUrl("img/wallets/helium-app/hotspot-tab-hex.png")} width="200"/>
 
 Each occupied hexagon will have a grey hexagon representing 1 Hotspot. Hexagons with more than 1 Hotspot will show a number.
 
@@ -50,7 +50,7 @@ Tapping on a hexagon with a number will bring up a Hotspot selector, showing the
 
 Hotspots that you follow will be <purple>purple</purple>, and Hotspots that you own will be <blue>blue</blue>. Other Hotspots will be grey.
 
-<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-content-pill.png")} style="width:200px;"/>
+<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-content-pill.png")} width="200"/>
 
 
 The Owned and Followed Hotspot Map layer is displayed by default.
