--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -68,7 +68,7 @@ This layer colors hexagons where you own or follow Hotspots. If the owned or fol
 
 By default, if there is an owned Hotspot in a hexagon, it will be colored blue, even if there is a followed Hotspot occupying that hexagon.
 
-<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-owned-followed.png")} />
+<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-owned-followed.png")} width="200"/>
 
 
 ### Witness
@@ -98,12 +98,12 @@ In the app, the color of a resolution 8 hexagon is based on the average transmit
 
 So if a hexagon has 3 Hotspots, with scales 1.0, 0.74, and 0.68, the average scale of that hexagon is 0.80667 and the color will be tinged light green.
 
-<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-scaling.png")} />
+<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-scaling.png")} width="200"/>
 
 ## Discovery Mode
 Discovery Mode is a tool to understand Hotspot coverage. Responders that heard a Discovery Mode packet will be highlighted in a yellow hexagon. Tapping on the yellow hexagon will bring up the name of the Hotspot that responded.
 
-<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-disco-results.png")} />
+<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-disco-results.png")} width="200"/>
 
 ## Assert Location
 Hotspot can now see how many other Hotspots are occupying hexagons next to them. 
@@ -114,7 +114,7 @@ It's important to be truthful in where your Hotspot is located for Proof-of-Cove
 
 :::
 
-<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-assert.png")} />
+<img src={useBaseUrl("img/wallets/helium-app/hotspot-app-assert.png")} width="200"/>
 
 
 
