--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -21,6 +21,7 @@ things like:
 - Configure your Wi-Fi
 - View your Hotspot's activity
 - See where other Hotspots are located
+- Run Discovery Mode
 
 [Check out the latest app release notes](https://engineering.helium.com/)
 
