--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -12,11 +12,29 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 Hexagons, while also a six-sided shape, is the underlying representation of the earth on the Helium network. Based on Uber's H3 index, the surface of the earth can be represented by a grid of hexagons at different resolutions, with higher resolutions covering a larger area, and the smallest resolution coverage centimeters of the earth. To understand the technical details and the implementation, please check out the <a href="https://blog.helium.com/mapping-the-world-with-hexagons-49f57d8b3df5">blog from our VP of Engineering</a>.
 
+| H3 Resolution        |      Average Hexagon Area (km²)      |   Average Hexagon Edge Length (km) |
+| ------------- | :-----------: | -----: |
+| 0      | 4,250,546.8477000 | 1,107.71259100 |
+| 1     |   607,220.9782429    |   418.676005500 |
+| 2 |   86,745.8540347    |  158.244655800 |
+| 3 | 12,392.2648621 | 59.810857940 |
+| 4 | 1,770.3235517 | 22.606379400 |
+| 5 | 252.9033645 | 8.544408276 |
+| 6 | 36.1290521 | 3.229482772 |
+| 7 | 5.1612932 | 1.220629759 |
+| 8 | 0.7373276 | 0.461354684 |
+| 9 | 0.1053325 | 0.174375668 |
+| 10 | 0.0150475 | 0.065907807 | 
+| 11 | 0.0021496 | 0.024910561 |
+| 12 | 0.0003071 | 0.009415526 |
+
 ## Hexagons in Helium
 
 Since the genesis block, Hotspot locations have been represented (and continue to) in resolution 12, a semi-precise point location covering 0.3 m². This is why some Hotspot appear to be "a few houses down from where I asserted". But, as the network expanded, concerns over security and privacy over Hotspot locations grew alongside with it. 
 
 Future discussions need to occur if the Helium network changes Hotspot asserts from resolution 12 to any other resolution. Changes to assert resolution will impact Proof-of-Coverage logic and will be discussed in a future HIP (Helium Improvement Proposal).
+
+<img src={useBaseUrl("img/wallets/helium-app/hexagons.png")} width="400"/>
 
 # Hexagons in the App
 
@@ -40,7 +58,7 @@ Viewing Resolution 8 Hexagons is only available on app version 3.3.0 and later.
 
 :::
 
-To view a map of the network, go to the Hotspot tab. 
+To view a map of the network, go to the **Hotspot** tab. 
 
 <img src={useBaseUrl("img/wallets/helium-app/hotspot-tab-hex.png")} width="200"/>
 
@@ -48,16 +66,18 @@ Each occupied hexagon will have a grey hexagon representing 1 Hotspot. Hexagons 
 
 Tapping on a hexagon with a number will bring up a Hotspot selector, showing the Hotspots inside that hexagon. Slide through the selector to see each individual Hotspot.
 
-Hotspots that you follow will be <purple>purple</purple>, and Hotspots that you own will be <blue>blue</blue>. Other Hotspots will be grey.
+Hotspots that you follow will be **purple**, and Hotspots that you own will be **blue**. Other Hotspots will be grey.
 
 <img src={useBaseUrl("img/wallets/helium-app/hotspot-app-content-pill.png")} width="200"/>
 
 
-The Owned and Followed Hotspot Map layer is displayed by default.
+The **Owned and Followed Hotspot** Map layer is displayed by default.
 
 ## Map Layers
 
 App version 3.3.0 introduces three new map layers. 
+
+<img src={useBaseUrl("img/wallets/helium-app/map-filter-owned.png")} width="200"/><img src={useBaseUrl("img/wallets/helium-app/map-filter-witness.png")} width="200"/><img src={useBaseUrl("img/wallets/helium-app/map-filter-scale.png")} width="200"/>
 
 1. Owned and Followed Hotspots
 2. Witness
@@ -121,28 +141,28 @@ It's important to be truthful in where your Hotspot is located for Proof-of-Cove
 
 
 ## FAQ
-1. 
-Q: Why are there hexagons now instead of exact Hotspot locations?
+
+**Q: Why are there hexagons now instead of exact Hotspot locations?**
 
 A: To protect Hotspot owner's privacy, the Helium app and Explorer will use hexagons instead of precise locations to display coverage. 
 
-2. 
-Q: Why is my Hotspot location so far off from the center of the hexagon?
+ 
+**Q: Why is my Hotspot location so far off from the center of the hexagon?**
 
 A: For every Hotspot at a resolution 12, we scale up to a resolution 8 and snap the Hotspot location to the center of resolution 8. This is why you may see the location shift. This will not affect how the system calculates proof-of-coverage.
 
-3. 
-Q: Why is my Hotspot so close to its neighboring Hotspot if I asserted 300 meters away?
+
+**Q: Why is my Hotspot so close to its neighboring Hotspot if I asserted 300 meters away?**
 
 A: Two Hotspots may occupy the same resolution 8 hexagons even if they are more than 300 meters away. Remember that a resolution 8 hexagon has an area of 737.3276 m² with edges measuring 461.354684 meters.
 
-4. 
-Q: Why do Hotspots in a hex have such varied scaling values?
+
+**Q: Why do Hotspots in a hex have such varied scaling values?**
 
 A: Each Hotspot's transmit scale is a formula based on its density in a number of resolutions (from resolution 12 to resolution 4). Hotspot A that occupies the same resolution as Hotspot B may be in a very dense resolution 10 hexagon, thus lowering their scale, while Hotspot B may be the only Hotspot occupying its resolution 10 hexagon, meaning their scale is not affected. 
 
-5. 
-Q: Are Assert Locations still precise?
+
+**Q: Are Assert Locations still precise?**
 
 A: Yes. Assert Locations are still precise (at a resolution 12). The precise location helps the network formulate proof-of-coverage challenges. Any changes to the assert location resolution will be presented in a HIP and brought to a community vote. There is no ETA for this at the moment.
 
