--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -77,7 +77,7 @@ The **Owned and Followed Hotspot** Map layer is displayed by default.
 
 App version 3.3.0 introduces three new map layers. 
 
-<img src={useBaseUrl("img/wallets/helium-app/map-filter-owned.png")} width="200"/><img src={useBaseUrl("img/wallets/helium-app/map-filter-witness.png")} width="200"/><img src={useBaseUrl("img/wallets/helium-app/map-filter-scale.png")} width="200"/>
+<img src={useBaseUrl("img/wallets/helium-app/map-filters.png")} width="600"/>
 
 1. Owned and Followed Hotspots
 2. Witness
