--- a/docs/troubleshooting/replace-sd-card.mdx
+++ b/docs/troubleshooting/replace-sd-card.mdx
@@ -16,7 +16,7 @@ Required Tools:
 - The ability to read/write a 64gb microSD card (unless pre-flashed card is
   acquired)
 
-In the even that your microSD card fails, here are the steps to re-flash it or
+In the event that your microSD card fails, here are the steps to re-flash it or
 replace it with a brand new one:
 
 1. Unplug and remove the 4 screws from the bottom of the unit using a Phillips
