--- a/docs/use-the-network/coverage-mapping/mappers-quickstart.mdx
+++ b/docs/use-the-network/coverage-mapping/mappers-quickstart.mdx
@@ -47,7 +47,7 @@ Next we'll fill in the details, see instructions and image below.
 2. Enter the name for this Integration: _Mappers Integration_
 3. Create and apply a Label for this Integration, we've used the same name as
    the integration.
-4. Finally, click _Create Integration_ to complete.
+4. Finally, click _Add Integration_ to complete.
 
 <img
   src={useBaseUrl(
