--- a/docs/use-the-network/coverage-mapping/mappers-quickstart.mdx
+++ b/docs/use-the-network/coverage-mapping/mappers-quickstart.mdx
@@ -68,7 +68,7 @@ fields. The original decoder can be found from the manufacturer's website
 [here](https://www.dragino.com/downloads/downloads/LGT_92/Decoder/LGT92-v1.5.0_decoder_20191129.txt).
 
 To start, navigate to the Functions page using the left navigation and then
-click _Create New Function_.
+click _Add Function_.
 
 1. Enter a name for the decoder (below we've used _Dragino LGT92 Decoder_), select the 
    type of Function, _Decoder_ in this case, and finally select _Custom Script_
