--- a/docs/use-the-network/console/integrations/cargo.mdx
+++ b/docs/use-the-network/console/integrations/cargo.mdx
@@ -57,7 +57,7 @@ field has different requirements described below.
 ### Decoded Field
 
 The `decoded` field is the preferred method for sending data to Cargo. This
-method requires the use of a [Function Decoder](../functions) on Console in
+method requires the use of a [Function Decoder](../../functions) on Console in
 order to decode the device payload before sending it to Cargo. The accepted
 fields are listed below and can be located at any depth within the `decoded`
 field.
