fix link to mappers api in quickstart

--- a/docs/use-the-network/coverage-mapping/mappers-quickstart.mdx
+++ b/docs/use-the-network/coverage-mapping/mappers-quickstart.mdx
@@ -133,7 +133,7 @@ click _Add Function_.
    be used at ground level. Accuracy is set to three meters since this device
    does not output a measure of accuracy and this is a reasonable measure of
    precision to be expected for this device. Find more details on the API
-   specification [here](./mappers-api).
+   specification [here](/use-the-network/coverage-mapping/mappers-api).
 3. Next search for and add the _Mappers Integration_ label we created with the
    integration.
 4. Finally save your function.
