update lgt92 decoder link

--- a/docs/use-the-network/coverage-mapping/mappers-quickstart.mdx
+++ b/docs/use-the-network/coverage-mapping/mappers-quickstart.mdx
@@ -65,7 +65,7 @@ devices this is usually manufacturer specific. For development devices,
 if often used. For this guide we'll be using a decoder specifically made for
 this tracking device and slightly modifying it by adding two additional required
 fields. The original decoder can be found from the manufacturer's website
-[here](https://www.dragino.com/downloads/downloads/LGT_92/Decoder/LGT92-v1.5.0_decoder_20191129.txt).
+[here](https://www.dragino.com/downloads/downloads/LGT_92/Decoder/LGT92-v1.6.4_decoder_TTN.txt).
 
 To start, navigate to the Functions page using the left navigation and then
 click _Add Function_.
@@ -75,7 +75,7 @@ click _Add Function_.
    from the drop down.
 2. Copy and paste the complete decoder function provided by the manufacturer
    found
-   [here](https://www.dragino.com/downloads/downloads/LGT_92/Decoder/LGT92-v1.5.0_decoder_20191129.txt) or below.
+   [here](https://www.dragino.com/downloads/downloads/LGT_92/Decoder/LGT92-v1.6.4_decoder_TTN.txt) or below.
 
    ```javascript
    function Decoder(bytes, port) {
