--- a/docs/troubleshooting/witnesses.mdx
+++ b/docs/troubleshooting/witnesses.mdx
@@ -5,6 +5,8 @@ sidebar_label: Understanding Witnesses
 slug: /troubleshooting/understanding-witnesses
 ---
 
+import useBaseUrl from "@docusaurus/useBaseUrl";
+
 # Understanding Witnesses
 
 Witnesses on the Helium network are Hotspots that have seen (or witnessed) a Proof-of-Coverage packet from a Hotspot. This single-stage Proof-of-Coverage challenge is also known as a <a href="https://docs.helium.com/blockchain/proof-of-coverage/#witnesses">"Beacon"</a>.
