--- a/docs/troubleshooting/witnesses.mdx
+++ b/docs/troubleshooting/witnesses.mdx
@@ -1,5 +1,5 @@
 ---
-id: witness-list
+id: understanding-witnesses
 title: Understanding Witnesses
 sidebar_label: Understanding Witnesses
 slug: /troubleshooting/understanding-witnesses
