--- a/docs/troubleshooting/witnesses.mdx
+++ b/docs/troubleshooting/witnesses.mdx
@@ -76,3 +76,4 @@ To figure out if your Hotspot is relayed, check explorer, the app, or the API it
 
 :::
 
+Visit the <a href="https://docs.helium.com/troubleshooting/network-troubleshooting">Network Troubleshooting guide for more information.
