--- a/docs/troubleshooting/witnesses.mdx
+++ b/docs/troubleshooting/witnesses.mdx
@@ -76,7 +76,7 @@ To figure out if your Hotspot is relayed, check explorer, the app, or the API it
 
 :::
 
-Visit the <a href="https://docs.helium.com/troubleshooting/network-troubleshooting">Network Troubleshooting guide for more information.
+Visit the <a href="https://docs.helium.com/troubleshooting/network-troubleshooting">Network Troubleshooting guide </a>for more information.
 
 # FAQ
 *My Hotspot went from x witnesses to y! What's wrong? I didn't do anything!*
