--- a/docs/troubleshooting/witnesses.mdx
+++ b/docs/troubleshooting/witnesses.mdx
@@ -1,13 +1,13 @@
 ---
 id: understanding-witnesses
 title: Understanding Witnesses
-sidebar_label: Understanding Witnesses
+sidebar_label: Understanding Witnesses and Relayed Hotspots
 slug: /troubleshooting/understanding-witnesses
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-# Understanding Witnesses
+# Understanding Witnesses and Relayed Hotspots
 
 Witnesses on the Helium network are Hotspots that have seen (or witnessed) a Proof-of-Coverage packet from a Hotspot. This single-stage Proof-of-Coverage challenge is also known as a <a href="https://docs.helium.com/blockchain/proof-of-coverage/#witnesses">"Beacon"</a>.
 
@@ -79,9 +79,11 @@ To figure out if your Hotspot is relayed, check explorer, the app, or the API it
 Visit the <a href="https://docs.helium.com/troubleshooting/network-troubleshooting">Network Troubleshooting guide </a>for more information.
 
 # FAQ
-*My Hotspot went from x witnesses to y! What's wrong? I didn't do anything!*
+**My Hotspot went from x witnesses to y! What's wrong? I didn't do anything!**
+
 This is normal! The witnesses in the list is a historical summary of who has witnessed a beacon recently. This number can vary day to day and only Hotspots that sent receipts back to the challenger in a timely manner is included.
 
-*My witnesses dropped to zero! Will this affect my earnings?*
+**My witnesses dropped to zero! Will this affect my earnings?**
+
 Witnesses reset when a Hotspot updates its location, antenna dBi, or elevation. There is nothing to be concerned about and this will not affect your earnings. Keep in mind that as the network grows, the rewards going to each Hotspot goes lower day over day. 
 
